test/expected/explain_dynamic_cast_pc-c.out
explain dynamic_cast<class C*>(x)
        ^
9: error: "dynamic_cast": unsupported keyword in C
